Made it run on windows, removed commons-codec dependency, set jva aversion to 8

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -89,6 +89,9 @@ application while protecting against XSS.
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <guava.version>27.1-jre</guava.version>
+    <!-- Maven compiler Plugin -->
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <build>
@@ -182,10 +185,10 @@ application while protecting against XSS.
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.3</version>
-          <configuration>
-            <source>6</source>
-            <target>6</target>
-          </configuration>
+            <configuration>
+                <source>${maven.compiler.source}</source>
+                <target>${maven.compiler.target}</target>
+            </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
